- added instagram icon to contact page - fixed reference to social media links on contact page - hide the select dropdown arrow on IE - styled the search box a little to give it some emphasis - disabled auto focus on search box unless it’s IE, since IE disables the placeholder on focus

--- a/source/stylesheets/defaults.css.sass
+++ b/source/stylesheets/defaults.css.sass
@@ -2,10 +2,6 @@
 @import 'config'
 @import 'remfont'
 
-// Colors
-
-
-
 // Global
 
 html, body
@@ -167,3 +163,8 @@ h6
   
   div
     padding: 0 $marginSize
+    
+    
+select
+  &::-ms-expand
+    display: none
