--- a/source/stylesheets/search.css.sass
+++ b/source/stylesheets/search.css.sass
@@ -25,16 +25,22 @@
     display: block
     margin: 0 auto
     width: 80%
+    padding: 15px
+    background: #222
+    font-size: 1.5em
 
     &:focus
       border: none
       color: #fff
 
-    &:-moz-placeholder
-      padding-left: 15px
+    &::-moz-placeholder
+      color: #CCC
 
     &::-webkit-input-placeholder
-      padding-left: 15px
+      color: #CCC
+      
+    &:-ms-input-placeholder
+      color: #CCC
   a
     position: fixed
     right: 15px
